--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,10 @@ KINDE_CLIENT_SECRET=kinde_client_secret
 KINDE_ISSUER_URL=kinde_issuer_url
 KINDE_SITE_URL=http://localhost:3000
 KINDE_POST_LOGOUT_REDIRECT_URL=http://localhost:3000
-KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/dashboard
+KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/workspace
 KINDE_DOMAIN=yourdomain.kinde.com
 KINDE_MANAGEMENT_CLIENT_ID=kinde_management_id
 KINDE_MANAGEMENT_CLIENT_SECRET=kinde_management_client_secret
+
+# arcjet security application
+ARCJET_KEY=arcjet_key
