08: ORM & Database Setup

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ KINDE_MANAGEMENT_CLIENT_SECRET=kinde_management_client_secret
 
 # arcjet security application
 ARCJET_KEY=arcjet_key
+
+# neon database
+DATABASE_URL=your_database_url
