--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.0",
     "embla-carousel-react": "^8.6.0",
+    "html-react-parser": "^5.2.7",
     "input-otp": "^1.4.2",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.545.0",
