14: Reverse Infinite Scroll

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-# kinde auth & billing
-
+# kinde auth & billing application
 KINDE_CLIENT_ID=kinde_client_id
 KINDE_CLIENT_SECRET=kinde_client_secret
 KINDE_ISSUER_URL=kinde_issuer_url
@@ -13,5 +12,5 @@ KINDE_MANAGEMENT_CLIENT_SECRET=kinde_management_client_secret
 # arcjet security application
 ARCJET_KEY=arcjet_key
 
-# neon database
+# neon database prisma postgresql
 DATABASE_URL=your_database_url
