18: Image Uploads (Presigned URLs) continue

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ ARCJET_KEY=arcjet_key
 
 # neon database prisma postgresql
 DATABASE_URL=your_database_url
+
+# uploadthing upload modal
+UPLOADTHING_TOKEN=uploadthing_token
