--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ DATABASE_URL=your_database_url
 
 # uploadthing upload modal
 UPLOADTHING_TOKEN=uploadthing_token
+
+# opentrouter api key LLM free pricing
+LLM_KEY=your_openrouter_api_key
