--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/react": "^2.0.76",
     "@arcjet/inspect": "1.0.0-beta.13",
     "@arcjet/next": "1.0.0-beta.13",
     "@hookform/resolvers": "^5.2.2",
     "@kinde-oss/kinde-auth-nextjs": "^2.9.2",
     "@kinde/management-api-js": "^0.14.0",
+    "@openrouter/ai-sdk-provider": "^1.2.0",
     "@orpc/client": "^1.9.4",
     "@orpc/server": "^1.9.4",
     "@orpc/tanstack-query": "^1.9.4",
@@ -53,7 +55,9 @@
     "@tiptap/pm": "^3.7.2",
     "@tiptap/react": "^3.7.2",
     "@tiptap/starter-kit": "^3.7.2",
+    "@tiptap/static-renderer": "^3.7.2",
     "@uploadthing/react": "^7.3.3",
+    "ai": "^5.0.76",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -65,6 +69,7 @@
     "input-otp": "^1.4.2",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.545.0",
+    "markdown-it": "^14.1.0",
     "motion": "^12.23.24",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
@@ -76,6 +81,7 @@
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
+    "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
@@ -86,6 +92,7 @@
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.19",
     "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
